Fix layout bug in chrome

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ body {
 
 div.flexspace {
     flex-grow: 1;
+    font-size: 0;
 }
 
 /* Layout Styles */
@@ -26,6 +27,7 @@ div.flexspace {
 section.config {
     flex-grow: 1;
     display: flex;
+    flex-direction: row;
     min-height: 0;
 }
 
@@ -113,17 +115,23 @@ fieldset.output {
     display: flex;
 }
 
-fieldset.output > div.progress {
+div.output {
     flex-grow: 1;
-    border: 1px solid #000;
-    padding: 1px;
     display: flex;
     flex-direction: row;
+}
+
+div.output > div.progress {
+    flex-grow: 1;
+    display: flex;
     align-items: center;
+    flex-direction: row;
+    border: 1px solid #000;
+    padding: 1px;
     position: relative;
 }
 
-fieldset.output > div.progress > div.bar {
+div.output > div.progress > div.bar {
     position: absolute;
     width: 0px;
     height: calc(100% - 2px);
@@ -135,12 +143,12 @@ fieldset.output > div.progress > div.bar {
     overflow: hidden;
 }
 
-fieldset.output span.progress {
+div.output span.progress {
     margin-left: 0.5rem;
     white-space: nowrap;
 }
 
-fieldset.output > a {
+div.output > a {
     text-decoration: none;
     margin: 0.2rem 0 0.2rem 1rem;
     padding: 0.2rem;
